fix(lightbox): set default z-index

--- a/src/components/dialog/style/lumapps/_index.scss
+++ b/src/components/dialog/style/lumapps/_index.scss
@@ -4,6 +4,7 @@
 
 .#{$lumx-base-prefix}-dialog-overlay {
     position: fixed;
+    z-index: 1000;
     top: 0;
     right: 0;
     bottom: 0;
